Cambio de tamaño
Actualizado los estilos para ofrecer una calculadora flotante más grande

--- a/css/estilos_calculadora.css
+++ b/css/estilos_calculadora.css
@@ -28,7 +28,7 @@
     cursor: pointer;
 }
 .calculadora{
-    max-width: 130px;
+    max-width: 300px;
     width: 100%;
     padding: 15px;
     background-color: rgb(37, 37, 37);
@@ -50,14 +50,14 @@
     border: 1px solid #BDBDBD;
     height: 20px;
     margin: 2px 0px;
-    width: 124px;
+    width: 100%;
     background-color: white;
     text-align: right;
 }
 .calculadora .teclado{
     display: grid;
-    grid-template-columns: repeat(4, 30px);
-    grid-auto-rows: minmax(30px,auto);
+    grid-template-columns: repeat(4, 24%);
+    grid-auto-rows: minmax(40px,auto);
     grid-gap: 4px;
 }
 .calculadora .teclado button{
